--- a/style.less
+++ b/style.less
@@ -4,17 +4,24 @@ input {
 
 .boton {
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .mensa{
     width: 17;
     color: #008f36;
     font-weight: bold;
-    text-align:center;
+    
+    
 }
 
 #opcion1{
-    margin-bottom: 30%;
-    margin-top: 30%;
-    padding: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    
+}
+#opcion2{
+    margin-bottom: 30px;
+    margin-top: 30px;
+    
 }
